--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#007bff">
   <link rel="icon" href="icons/icon-192x192.png">
@@ -95,39 +95,40 @@
 <body>
 
   <div class="container mt-3">
+    <!-- Seccion de usuario identificado -->
     <div id="user-info" class="d-flex justify-content-end align-items-center gap-2 mb-3" style="display: none;">
       <span id="nombre-usuario" class="text-success fw-semibold"></span>
-      <button onclick="cerrarSesion()" class="btn btn-sm btn-link text-danger p-0" title="Cerrar sesión">🚪</button>
-
+      <button onclick="cerrarSesion()" class="btn btn-sm text-danger p-0" title="Cerrar sesión">
+        <span class="bi bi-box-arrow-right"></span>
+      </button>
     </div>
 
     <h2 class="text-center mb-5">🎥 Canales en Vivo</h2>
     <button id="installBtn" class="btn btn-primary" style="display: none;">
-      📲 Instalar aplicación
+      📲 Instalar App
     </button>
     <div id="card-container">
       <!-- Secciones con encabezados y filas se generarán aquí -->
     </div>
   </div>
 
-
-  <!-- MODAL -->
-  <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-xl">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="videoModalLabel">Video en Vivo</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-        </div>
-        <div class="modal-body position-relative">
-          <iframe id="videoFrame" class="video-iframe" src="javascript:void(0)" width="100%" height="500" frameborder="0" scrolling="no"
-            allowfullscreen sandbox="allow-same-origin allow-scripts allow-presentation">
-          </iframe>
-        </div>
-
+  <!-- Modal de video -->
+  <div class="modal fade" id="videoModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="videoModalLabel">Video en Vivo</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body position-relative">
+        <iframe id="videoFrame" class="video-iframe" src="about:blank" width="100%" height="500" frameborder="0" scrolling="no"
+          allowfullscreen sandbox="allow-same-origin allow-scripts allow-presentation">
+        </iframe>
       </div>
     </div>
   </div>
+</div>
+
 
   <!-- Modal de acceso -->
   <div class="modal fade" id="accessModal" tabindex="-1" aria-labelledby="accessModalLabel" aria-hidden="true"
@@ -440,7 +441,6 @@
       container.appendChild(row);
     });
 
-
     // Abrir modal con video
     function abrirModal(url, titulo) {
       document.getElementById("videoModalLabel").textContent = titulo;
@@ -500,7 +500,6 @@
     // ✅ Inicializar Firebase
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
-
     window.addEventListener('DOMContentLoaded', () => {
       const modalElement = document.getElementById('accessModal');
       const modal = new bootstrap.Modal(modalElement);
@@ -635,7 +634,6 @@
           console.error("Error al enviar correo:", error);
         });
     }
-
 
     // TODO Permitir inicio de sesión en más de un dispositivo
     // TODO Validar canales en base al plan
