--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body position-relative">
-        <iframe id="videoFrame" class="video-iframe" src="about:blank" width="100%" height="500" frameborder="0" scrolling="no"
+        <iframe id="videoFrame" src="javascript:void(0);" class="video-iframe" width="100%" height="500" frameborder="0" scrolling="no"
           allowfullscreen sandbox="allow-same-origin allow-scripts allow-presentation">
         </iframe>
       </div>
