--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="styles/cards.css">
   <link rel="stylesheet" href="styles/modal.css">
+  <link rel="stylesheet" href="styles/toast.css">
   <!-- <link rel="manifest" href="manifest.json"> -->
   <meta name="theme-color" content="#007bff">
   <link rel="icon" href="icons/icon-192x192.png">
 </head>
 
 <body>
+
+  <!-- Contenedor de notificaciones -->
+  <div id="toast-container"></div>
 
   <div class="container mt-3">
     <!-- Seccion de usuario identificado -->
@@ -94,6 +98,8 @@
   <script src="scripts/canalesData.js"></script>
   <!-- Archivos de datos de usuarios -->
   <script src="scripts/usuariosData.js"></script>
+  <!-- Archivo para manejar las alertas -->
+  <script src="scripts/toast.js"></script>
   <!-- Archivo de instalación como PWA -->
   <script src="scripts/instalacion.js"></script>
   <!-- Archivos de conexión a la red de datos o wifi -->
